# The-AI-Engineer-Challenge

./: Accessing_GPT_4_1_nano_Like_a_Developer.ipynb  README.md  architecture_diagram.md  pyproject.toml
.cursor/rules/: frontend-rule.mdc
aimakerspace/: text_utils.py  vectordatabase.py
aimakerspace/openai_utils/: chatmodel.py  embedding.py
api/: app.py  requirements.txt  vercel.json
frontend/: README.md
frontend/src/app/: page.module.css  page.tsx
frontend/src/app/api/chat/: route.ts
frontend/src/app/api/health/: route.ts
