[project]
name = "beyond-chatgpt"
version = "0.1.0"
description = "gpt-like-a-dev"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "jupyter>=1.1.1",
    "ipykernel>=6.29.0",
    "openai",
    "pydantic>=2.11.4",
    "uvicorn>=0.34.2",
    "pypdf2>=3.0.1",
    "pytesseract>=0.3.13",
    "pdf2image>=1.17.0",
    "python-dotenv>=1.1.1",
    "numpy>=2.3.3",
]
